test/spec_vectors/simd_i32x4_arith2/fail/module_15.wat
(module (func (result v128) (i32x4.max_s (i32.const 0) (f32.const 0.0))))